# RayTracer

./: .clang-format  .gitignore  CMakeLists.txt  Readme.md
includes/imgproc/: image_io.h  pixel_manip.h
includes/math/: color.h  ray.h  vec3.hpp
src/: Main.cpp  camera.cpp  hittable_list.cpp  image_io.cpp  main.cpp  material.cpp  pixel_manip.cpp  scene.cpp  sphere.cpp  vec3.cpp
src/includes/math/: color.h  common.hpp  ray.h  vec3.h  vec3.hpp
src/includes/objects/: camera.h  hittable.h  hittable_list.h  material.h  scene.h  sphere.h
